--- a/todo
+++ b/todo
@@ -1,4 +1,4 @@
-core (mandb neovim bashrc)
+archbase (man-db neovim bashrc)
 openssh
 sudo
 dns (avahi)
@@ -8,6 +8,7 @@ xorg
 nvidia
 fonts
 gtk
+sound
 mkinitcpio
 grub
 desktopmanager
@@ -15,16 +16,17 @@ i3
 sessionmanager
 picom
 filemanager
+applauncher (dmenu/rofi)
 notifications
-imageviewer
+images
 wallpaper
 nitrogen
 terminal
 starship
-sound
 lockscreen
-firefox
+webbrowser (firefox)
 code
-spotifyd
+music (spotifyd, spotify tui)
+video (mpv)
 makemkv
 steam
