Switching from code to vscodium.

--- a/todo
+++ b/todo
@@ -27,7 +27,7 @@
 [ ] lockscreen
 [ ] texteditor
 [ ] webbrowser (ungoogled chromium)
-[*] code
+[*] vscodium
 [ ] music (spotifyd, spotify tui)
 [*] video (mpv)
 [*] makemkv
