--- a/todo
+++ b/todo
@@ -18,7 +18,7 @@
 [*] picom
 [*] filemanager
 [*] applauncher
-[ ] notifications
+[*] notifications
 [ ] clipboard
 [ ] images
 [ ] wallpaper (including nitrogen)
