Adding music role.

--- a/todo
+++ b/todo
@@ -28,7 +28,7 @@
 [ ] texteditor
 [ ] webbrowser (ungoogled chromium)
 [*] vscodium
-[ ] music (spotifyd, spotify tui)
+[*] music (spotifyd, spotify tui)
 [*] video (mpv)
 [*] makemkv
 [ ] archivemanager
