--- a/todo
+++ b/todo
@@ -9,6 +9,7 @@
 [*] fonts
 [*] gtk
 [*] qt
+[ ] powermanagement
 [*] sound
 [*] mkinitcpio
 [*] grub
@@ -19,8 +20,7 @@
 [*] filemanager
 [*] applauncher
 [*] notifications
-[ ] clipboard
-[ ] images
+[*] images
 [ ] wallpaper (including nitrogen)
 [*] terminal
 [ ] starship
@@ -32,4 +32,5 @@
 [*] video (mpv)
 [*] makemkv
 [ ] archivemanager
+[ ] wine
 [*] games
