Updating to do list

--- a/todo
+++ b/todo
@@ -21,7 +21,7 @@
 [*] applauncher
 [*] notifications
 [*] images
-[ ] wallpaper (including nitrogen)
+[*] wallpaper (including nitrogen)
 [*] terminal
 [ ] starship
 [ ] lockscreen
