--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
 [*] archbase
+[*] archbase
 [*] openssh
 [*] sudo
 [*] dns (avahi)
@@ -23,7 +24,7 @@
 [*] wallpaper (including nitrogen)
 [*] terminal
 [*] texteditor
-[ ] webbrowser (ungoogled chromium)
+[*] webbrowser (ungoogled chromium)
 [*] music (spotifyd, spotify tui)
 [*] video (mpv)
 [*] makemkv
