--- a/todo
+++ b/todo
@@ -26,8 +26,8 @@
 [*] terminal
 [*] texteditor
 [*] webbrowser (ungoogled chromium)
-[*] music (spotifyd, spotify tui)
+[*] music (spotifyd)
 [*] video (mpv)
 [*] makemkv
-[ ] wine
+[*] wine
 [*] games
